<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-40dp"
    android:background="@drawable/background"
    tools:context=".activities.LoginActivity">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logo" />

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:layout_alignBottom="@+id/createAccount"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-10dp"
        android:alpha=".9"
        android:background="@drawable/progress_white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lgTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/login_account"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fnameh"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lgTv"
        android:layout_margin="16dp"
        android:hint="@string/username"
        app:hintTextColor="@color/black_dull">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_person_black_24dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/snameh"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fnameh"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/pass"
        app:hintTextColor="@color/black_dull">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_black_24dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/snameh"
        android:text="@string/forgot_password"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black_dull" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:text="@string/login"
        style="@style/Widget.MaterialComponents.Button"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgot_password"
        android:layout_margin="16dp"
        android:background="@drawable/button_background" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/createAccount"
        android:text="@string/create_account"
        style="@style/Widget.MaterialComponents.Button"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_margin="16dp"
        android:background="@drawable/button_background_secondary" />
</RelativeLayout>