<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/logo" />


    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:layout_alignBottom="@+id/ll1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="-10dp"
        android:alpha=".9"
        android:background="@drawable/progress_white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lgTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="@dimen/margin_xxxlarge"
        android:layout_marginEnd="@dimen/margin_xxxlarge"
        android:text="@string/confirm_code"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textAlignment="center"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_codeLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lgTv"
        android:layout_margin="16dp"
        android:hint="@string/reset_code"
        app:hintTextColor="@color/black_dull">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/submitlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_codeLayout">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/confirmcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:clickable="true"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            app:elevation="2dp"
            app:rippleColor="@color/Lgrey"
            app:srcCompat="@drawable/ic_chevron_right"
            android:visibility="visible"/>


        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll1"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/submitlayout"
        android:layout_margin="16dp"
        android:background="@drawable/button_background_secondary"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:elevation="4dp"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel" />
    </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>